# rust-raytracer

./: Cargo.toml  README.md  image.ppm
src/: lib.rs  main.rs
src/app/: accumulator.rs  controller.rs  mod.rs
src/core/: mod.rs  ray.rs
src/geometry/: aabb.rs  bvh.rs  hittable.rs  mod.rs  sphere.rs
src/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/math/: mod.rs  vec3.rs
src/render/: camera.rs  mod.rs  renderer.rs
src/scene/: world.rs
src/utils/: image.rs  mod.rs
